--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ pandas = "^2.1.4"
 requests = "^2.31.0"
 flask = "^3.0.0"
 line-bot-sdk = "^3.5.1"
+data = "^0.4"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
