--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ requests = "^2.31.0"
 flask = "^3.0.0"
 line-bot-sdk = "^3.5.1"
 data = "^0.4"
+numpy = "^1.26.2"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
